# vbw

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT-BOUNDARY.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml  vbw-policy.json.example
.cargo/: audit.toml
.github/: FUNDING.yml  branch-protection.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  dco.yml  release.yml
examples/: DEMO.md
examples/algorithm-migration/: main.rs
examples/minimal-bundle/: layout.json  provenance.json
examples/minimal-bundle/links/: placeholder.link
examples/real-world-cosign/: EXPECTED-OUTPUT.txt  README.md  TESTING.md  fetch.sh  keygen.sh  setup-bundle.sh  verify.sh
src/: attest.rs  build.rs  bundlehash.rs  fs_guard.rs  independence.rs  lib.rs  main.rs  policy.rs  toolcheck.rs
src/crypto/: algorithm.rs  envelope.rs  errors.rs  hybrid.rs  kdf.rs  mod.rs  policy.rs  registry.rs
src/crypto/providers/: ed25519.rs  mod.rs  rustcrypto.rs  stub.rs
tests/: crypto_integration.rs  integration.rs  red_team.rs
