[package]
name = "vbw"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
authors = ["SCQCS Initiative"]
license = "Apache-2.0"
description = "Verified Build Witness - Zero-knowledge build integrity verification"
repository = "https://github.com/scqcs/vbw"
homepage = "https://github.com/scqcs/vbw"
documentation = "https://github.com/scqcs/vbw/blob/main/ARCHITECTURE.md"
keywords = ["supply-chain", "slsa", "attestation", "security", "verification"]
categories = ["development-tools", "cryptography"]
readme = "README.md"
exclude = [
    "examples/",
    ".github/",
    "*.zip",
]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
regex = "1"
time = { version = ">=0.3.47, <0.4", features = ["formatting"] }

# Post-quantum cryptography (RustCrypto FIPS implementations)
ml-dsa  = "0.1.0-rc.7"   # FIPS 204: ML-DSA (CRYSTALS-Dilithium) signatures
ml-kem  = "0.3.0-rc.0"   # FIPS 203: ML-KEM (CRYSTALS-Kyber) key encapsulation
slh-dsa = "0.2.0-rc.4"   # FIPS 205: SLH-DSA (SPHINCS+) hash-based signatures

sha3    = "0.11.0-rc.7"  # SHA-3 hash family (same version tree as PQC crates)

# Crypto utilities for PQC hybrid composition
hkdf    = "0.12"                                    # HKDF key derivation for hybrid KEM
hmac    = "0.12"                                    # HMAC (required by HKDF)
subtle  = "2"                                       # Constant-time comparisons
zeroize = { version = "1", features = ["derive"] }  # Zeroing sensitive memory

[dev-dependencies]
tempfile = "3"
rand_core = "0.10"   # TryRng/CryptoRng for PQC key generation in tests

[[bin]]
name = "vbw"
path = "src/main.rs"

[lib]
name = "vbw"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

[lints.rust]
unsafe_code = "forbid"
# Auditors expect all public items to be documented.
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Security-critical lints — RustSec best-practice enforcement.
# These prevent panic-inducing patterns in production paths.
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

# Allowed pedantic lints — intentional style choices for this codebase.
# Each is documented to show the auditor it was a deliberate decision.
module_name_repetitions = "allow"   # VBW modules are small; repetition aids grep-ability
must_use_candidate = "allow"        # Not all return values need #[must_use] in a CLI
missing_errors_doc = "allow"        # Error types are self-documenting via anyhow
missing_panics_doc = "allow"        # Panics are forbidden in production paths (see unwrap_used)
struct_excessive_bools = "allow"    # VbwPolicy uses bools by design (matches JSON schema)
needless_pass_by_value = "allow"    # Clap derive requires owned types
too_many_lines = "allow"            # verify_bundle is long but linear; splitting harms readability
if_not_else = "allow"               # Negative-first branches are clearer in some security checks
items_after_statements = "allow"    # collect_key_paths is defined near its single call site
uninlined_format_args = "allow"     # Explicit format args are clearer in error messages
